--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ django-dotenv = "*"
 django-tinymce = "*"
 django-ckeditor = "*"
 psycopg2-binary = "*"
+gunicorn = "*"
+django-heroku = "*"
 
 [dev-packages]
 
